DRY up icon function and fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,8 +53,6 @@ li {
 }
 
 .page-title {
-
-  text-align: center;
  margin-left: 2.2rem;
  margin-top: 3rem;
 }
